# Downpour

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  HOW_TO_RUN.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  run.bat  test_out.txt  test_out2.txt  vite.config.js
.kiro/specs/idm-download-manager/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: project.md
context/: ARCHIVE_MEMORY.md  SESSION_LIVE.md  WORKING_MEMORY.md
extension/: README.md  background.js  content.js  filter.js  filter.property.test.js  manifest.json  package.json  popup.html  popup.js
plans/right-click-download/: task.md
plans/space-cleanup-and-improvements/: task.md
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/proptest-regressions/: downloader.txt  speed_limiter.txt
src-tauri/src/: capture_server.rs  categorizer.rs  downloader.rs  lib.rs  main.rs  media_extractor.rs  models.rs  persistence.rs  queue.rs  settings.rs  speed_limiter.rs
src-tauri/src/commands/: download.rs  media.rs  mod.rs  queue.rs  settings.rs  system.rs
src-tauri/tests/: integration.rs
