[package]
name = "downpour"
version = "0.1.0"
description = "A fast, universal IDM-style download manager."
edition = "2021"
rust-version = "1.77"

[lib]
name = "downpour_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
dirs = "5"
tokio-util = { version = "0.7", features = ["rt"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
# Used only for sending SIGTERM/SIGKILL to the yt-dlp child process group.
libc = "0.2"

[dev-dependencies]
proptest = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
axum = "0.7"

[profile.release]
opt-level = "s"
lto = true
strip = true

# Keep useful application backtraces in development without retaining full
# debug information for the large third-party dependency graph.
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false
